welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: value droite is not a member of Unit
  gauche();avance(2)droite();
                    ^